--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ dependencies = [
     "deepseek>=1.0.0",
     "faiss-cpu>=1.11.0.post1",
     "jq>=1.10.0",
+    "keybert>=0.9.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-groq>=0.3.6",
     "langchain-openai>=0.3.28",
+    "langdetect>=1.0.9",
+    "nltk>=3.9.1",
 ]
