runing the pipeline:80%

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "backoff>=2.2.1",
     "deepseek>=1.0.0",
     "faiss-cpu>=1.11.0.post1",
     "jq>=1.10.0",
