--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "backoff>=2.2.1",
     "deepseek>=1.0.0",
     "faiss-cpu>=1.11.0.post1",
+    "fastapi>=0.116.1",
     "jq>=1.10.0",
     "keybert>=0.9.0",
     "langchain>=0.3.27",
